examples/datalog/09_recursion/45_mutual_recursion.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mutual_rec
Knowledge graph 'test_mutual_rec' created.
Switched to knowledge graph: test_mutual_rec
> .kg use test_mutual_rec
Switched to knowledge graph: test_mutual_rec
> +start[(1,)].
Inserted 1 fact(s) into 'start'.
> +even(X) :- start(X).
Rule 'even' registered.
> +even(X) :- odd(Y), X = Y + 1, X < 10.
Script error: Failed to register rule: Unsafe rule 'even': Head variable(s) X not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
